[package]
name = "hello-cargo"
version = "1.0.0"
authors = ["Quan Pham <doraemonfanclub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4.0"
gtk = "0.8.1"
cairo-rs = "0.8.1"
glib = "0.9.3"
gio = "0.8.1"
